--- a/DataframeConverter/DataframeConverter.csproj
+++ b/DataframeConverter/DataframeConverter.csproj
@@ -9,6 +9,14 @@
 
   <ItemGroup>
     <PackageReference Include="FluentFTP" Version="53.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="Configs\mvsFtpSettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
